@@ -48,7 +48,10 @@ enum
     WX_GL_MIN_ACCUM_BLUE,  // use blue buffer with most bits (> MIN_ACCUM_BLUE bits)
     WX_GL_MIN_ACCUM_ALPHA, // use alpha buffer with most bits (> MIN_ACCUM_ALPHA bits)
     WX_GL_SAMPLE_BUFFERS,  // 1 for multisampling support (antialiasing)
-    WX_GL_SAMPLES          // 4 for 2x2 antialiasing supersampling on most graphics cards
+    WX_GL_SAMPLES,         // 4 for 2x2 antialiasing supersampling on most graphics cards
+    WX_GL_CORE_PROFILE,    // use an OpenGL core profile
+    WX_GL_MAJOR_VERSION,   // major OpenGL version of the core profile
+    WX_GL_MINOR_VERSION    // minor OpenGL version of the core profile
 };
 
 #define wxGLCanvasName wxT("GLCanvas")
